add links & intro

--- a/timelog.org
+++ b/timelog.org
@@ -1,3 +1,5 @@
 * upgradeneeded
+  CLOCK: [2014-12-14 日 17:25]
+  CLOCK: [2014-12-14 日 17:13]--[2014-12-14 日 17:22] =>  0:09
   CLOCK: [2014-12-14 日 14:57]--[2014-12-14 日 15:50] =>  0:53
 
