--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,5 @@
 * upgradeneeded
-  CLOCK: [2014-12-14 日 17:25]
+  CLOCK: [2014-12-14 日 17:25]--[2014-12-14 日 19:08] =>  1:43
   CLOCK: [2014-12-14 日 17:13]--[2014-12-14 日 17:22] =>  0:09
   CLOCK: [2014-12-14 日 14:57]--[2014-12-14 日 15:50] =>  0:53
 
