--- a/timelog.org
+++ b/timelog.org
@@ -1,4 +1,7 @@
 * upgradeneeded
+  CLOCK: [2014-12-16 二 00:36]
+  CLOCK: [2014-12-15 一 23:58]--[2014-12-15 一 23:59] =>  0:01
+  CLOCK: [2014-12-15 一 23:04]--[2014-12-15 一 23:11] =>  0:07
   CLOCK: [2014-12-14 日 17:25]--[2014-12-14 日 19:08] =>  1:43
   CLOCK: [2014-12-14 日 17:13]--[2014-12-14 日 17:22] =>  0:09
   CLOCK: [2014-12-14 日 14:57]--[2014-12-14 日 15:50] =>  0:53
