--- a/timelog.org
+++ b/timelog.org
@@ -1,5 +1,5 @@
 * upgradeneeded
-  CLOCK: [2014-12-16 二 00:36]
+  CLOCK: [2014-12-16 二 00:36]--[2014-12-16 二 01:46] =>  1:10
   CLOCK: [2014-12-15 一 23:58]--[2014-12-15 一 23:59] =>  0:01
   CLOCK: [2014-12-15 一 23:04]--[2014-12-15 一 23:11] =>  0:07
   CLOCK: [2014-12-14 日 17:25]--[2014-12-14 日 19:08] =>  1:43
